add_library(data_structures
        bitset/bitset.c
        ordered_array_set/ordered_array_set.c
        unordered_array_set/unordered_array_set.c
        vector/vector_t/vector.c
        vector/test_vector/vector_test.c
        vector/vector_void/vector_void.c vector/test_vector_void/test_vector_void.c vector/test_vector_void/test_vector_void.h)