add_library(data_structures
        bitset/bitset.c
        ordered_array_set/ordered_array_set.c
        unordered_array_set/unordered_array_set.c
        vector/vector_t/vector.c
        vector/test_vector/vector_test.c
        vector/vector_void/vector_void.c
        matrix/matrix_t/matrix.c
        matrix/test_matrix/test_matrix.c
        matrix/task_matrix/task/task.c
        matrix/task_matrix/test_task/test_task.c
        string_t/str_lib/string.c
        string_t/test/test_string.c
        string_t/tasks/tasks_and_tests.c
        string_t/test/test_string.c
        string_t/test/test_task_string.c)